<resources>
    <string name="app_name">Music_29</string>
    <string name="hello_world">Hello World!</string>
    <string name="name_music_app">Sound Cloud Music</string>
    <string name="genre_all_music">All Music</string>
    <string name="more_song">More ></string>
    <string name="genres">Genres</string>
    <string name="genre_alternativerock">Alternativerock</string>
    <string name="genre_ambient">Ambient</string>
    <string name="genre_classical">Alassical</string>
    <string name="genre_all_audio">All Audio</string>
    <string name="genre_country">Country</string>
    <string name="name_tab_online">Online</string>
    <string name="name_tab_offline">Offline</string>
    <string name="error">"Error :"</string>
    <string name="favorite_songs">Favourite</string>
    <string name="playlist">Songs</string>
    <string name="downloaded">Downloaded</string>
    <string name="album">Album</string>
    <string name="network_not_available">"Network not available"</string>
    <string name="time_media">00:00</string>
    <string name="text_search">Search</string>
    <string name="text_hint_search">Song Name</string>
    <string name="not_find_data">Data not find</string>
    <string name="string_null">null</string>
    <string name="download">"Song Download"</string>
    <string name="song_fail">Song Fail</string>
    <string name="song_download">Song is not download</string>
    <string name="song_downloading">Song is downloading</string>
</resources>
