<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_home"
    >
    <TextView
        android:id="@+id/text_musics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/genre_all_music"
        android:textColor="@color/color_black"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/text_more_musics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/more_song"
        android:textColor="@color/color_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_musics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_musics"
        />
    <TextView
        android:id="@+id/text_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/genres"
        android:textColor="@color/color_black"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_audios"
        />
    <TextView
        android:id="@+id/text_alternativerock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_2"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_2"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/color_red"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/genre_alternativerock"
        android:textColor="@color/color_black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_ambients"
        app:layout_constraintEnd_toStartOf="@+id/text_countries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_genre"
        />
    <TextView
        android:id="@+id/text_ambients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_2"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_2"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@color/color_green"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/genre_ambient"
        android:textColor="@color/color_black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_classicals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_alternativerock"
        />
    <TextView
        android:id="@+id/text_classicals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_2"
        android:layout_marginRight="8dp"
        android:layout_marginStart="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@color/color_yellow"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/genre_classical"
        android:textColor="@color/color_black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_ambients"
        app:layout_constraintTop_toBottomOf="@+id/text_countries"
        />
    <TextView
        android:id="@+id/text_audios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/genre_all_audio"
        android:textColor="@color/color_black"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_musics"
        />
    <TextView
        android:id="@+id/text_more_audios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/more_song"
        android:textColor="@color/color_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_musics"
        />
    <TextView
        android:id="@+id/text_countries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_2"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/color_purple"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/genre_country"
        android:textColor="@color/color_black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_classicals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_alternativerock"
        app:layout_constraintTop_toBottomOf="@+id/text_genre"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_audios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_audios"
        />
</android.support.constraint.ConstraintLayout>
